# gomoku

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  transposition_table_4.csv
rust/: Cargo.toml  Cargo.toml.save
rust/src/: game.rs  ia.rs  lib.rs
src/: constants.rs  game.rs  gameUI.rs  heuristic.rs  ia.rs  ia_cp.rs  main.rs  menu.rs
svelte/: package-lock.json  package.json  rollup.config.js
svelte/src/: App.svelte  Board.svelte  Cell.svelte  main.js
vue/: package-lock.json  package.json  vite.config.ts
vue/src/: App.vue
vue/src/components/: Board.vue  BoardIa.vue  Cell.vue  HelloWorld.vue
vue/src/router/: index.ts
vue/src/views/: game.vue  gameIA.vue
