[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.11.0"
bevy_simple_text_input = "0.4.0"
rand = "0.8.4"
once_cell = "1.8.0"
atomic = "0.5.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
